quorum/test/tests/TypeChecker/Pass/TextGetSubtextWithEnd.quorum
class Main
    action Main
        Text t 
        t:SetValue("hello")
        text p = "hello"

        print t:GetSubtext(0, 2)
        print p:GetSubtext(0, 2)
    end
end