quorum/test/tests/TypeChecker/Fail/ExpAssignNumObjTextObj.quorum
Text t
t:SetValue("5.0")
Number n = cast(Number, t)